@@ -93,6 +93,10 @@ static gboolean
 bonobo_socket_expose_event (GtkWidget      *widget,
 			    GdkEventExpose *event)
 {
+	gboolean retval;
+
+	retval = GTK_WIDGET_CLASS (parent_class)->expose_event (widget, event);
+
 	dprintf ("bonobo_socket_expose_event %p (%d, %d), (%d, %d)\n",
 		 widget,
 		 event->area.x, event->area.y,
@@ -106,7 +110,7 @@ bonobo_socket_expose_event (GtkWidget      *widget,
 		       event->area.y + event->area.height);
 #endif
 
-	return FALSE;
+	return retval;
 }
 
 static void
