@@ -1,3 +1,8 @@
+2002-08-06  Federico Mena Quintero  <federico@ximian.com>
+
+	* bonobo/bonobo-socket.c (bonobo_socket_expose_event): Call the
+	handler of our parent class.
+
 2002-08-05  Michael Meeks  <michael@ximian.com>
 
 	* Version 2.0.1
